--- a/accommodations.html
+++ b/accommodations.html
@@ -2,6 +2,7 @@
 
   <html>
     <head>
+      <link href="css/faveplace.css" rel="stylesheet" type="text/css">
       <title>Bliss</title>
     </head>
     <body>
