adds css to all pages

--- a/accommodations.html
+++ b/accommodations.html
@@ -2,7 +2,7 @@
 
   <html>
     <head>
-      <link href="css/faveplace.css" rel="stylesheet" type="text/css">
+      <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
       <title>Bliss</title>
     </head>
     <body>
@@ -16,6 +16,16 @@
         <a href="pictures.html">Pictures</a>
         <a href="travel-arrangements.html">Travel Arrangements</a>
       </nav>
+
+      <h1> Accommodations</h1>
+      <ul>
+        <li>Spa</li>
+        <li>Bungalow</li>
+        <li>Massages</li>
+        <li>Tiki House</li>
+        <li>Hilton</li>
+        <li>Hammocks</li>
+      </ul>
 
       <img src="" >
 
