--- a/pictures.html
+++ b/pictures.html
@@ -2,7 +2,7 @@
 
   <html>
     <head>
-      <link href="css/faveplace.css" rel="stylesheet" type="text/css">
+      <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
       <title>Bliss</title>
     </head>
     <body>
@@ -17,7 +17,14 @@
         <a href="travel-arrangements.html">Travel Arrangements</a>
       </nav>
 
-      <img src="" >
+
+      <h1>Pictures</h1>
+      <ul>
+        <img src="img/fishImg.jpg" alt="picture of a fish" >
+        <img src="img/firedancer.jpg" alt="picture of a firedancer" >
+        <img src="img/tikis.jpg" alt="picture of tiki statues" >
+        <img src="img/scuba.jpg" alt="picture of a scuba diver" >
+      </ul>
 
 
 
