--- a/activities.html
+++ b/activities.html
@@ -2,7 +2,7 @@
 
   <html>
     <head>
-      <link href="css/faveplace.css" rel="stylesheet" type="text/css">
+      <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
       <title>Bliss</title>
     </head>
     <body>
@@ -16,6 +16,16 @@
         <a href="pictures.html">Pictures</a>
         <a href="travel-arrangements.html">Travel Arrangements</a>
       </nav>
+
+      <h1>Activities</h1>
+      <ul>
+        <li>Infinity Pool</li>
+        <li>Sky Diving</li>
+        <li>Scuba Diving</li>
+        <li>Rock Climbing</li>
+        <li>Waterfalls</li>
+        <li>White Water Rafting</li>
+      </ul>
 
       <img src="" >
 
