--- a/contact_information.html
+++ b/contact_information.html
@@ -2,7 +2,7 @@
 
   <html>
     <head>
-      <link href="css/faveplace.css" rel="stylesheet" type="text/css">
+      <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
       <title>Bliss</title>
     </head>
     <body>
@@ -16,6 +16,14 @@
         <a href="pictures.html">Pictures</a>
         <a href="travel-arrangements.html">Travel Arrangements</a>
       </nav>
+
+      <h1> Contact Information</h1>
+      <ul>
+        <li>Call Us: 204-596-0893</li>
+        <li>777 Paradize Fallz</li>
+        <li>Fantasy Island</li>
+        <li>USA<li>
+      </ul>
 
       <img src="" >
 
