--- a/travel-arrangements.html
+++ b/travel-arrangements.html
@@ -2,7 +2,7 @@
 
   <html>
     <head>
-      <link href="css/faveplace.css" rel="stylesheet" type="text/css">
+      <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
       <title>Bliss</title>
     </head>
     <body>
