--- a/travel-arrangements.html
+++ b/travel-arrangements.html
@@ -10,13 +10,20 @@
       <h1>Welcome to Bliss</h1>
 
       <nav>
+        <a href="index.html">Home</a>
         <a href="accommodations.html">Accommodations</a>
         <a href="activities.html">Activities</a>
         <a href="contact_information.html">Contact</a>
         <a href="pictures.html">Pictures</a>
-        <a href="index.html">Home</a>
       </nav>
 
+      <h1> Travel Arrangements</h1>
+      <ul>
+        <li>Call Us: 204-596-0893</li>
+        <li>777 Paradize Fallz</li>
+        <li>Fantasy Island</li>
+        <li>USA<li>
+      </ul>
       <img src="" >
 
 
